fixing alignment

--- a/web-client/src/styles/custom.scss
+++ b/web-client/src/styles/custom.scss
@@ -34,12 +34,8 @@ hr {
   max-width: 200px;
 }
 
-.max-width-30 {
-  max-width: 30%;
-}
-
-.sealed-address-notice {
-  padding-right: 6.5rem;
+.max-width-50 {
+  max-width: 50%;
 }
 
 .text-align-left {
